<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".view.mainActivity.CoinDescriptionActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_image"
        android:layout_gravity="center"
        android:translationZ="20dp"
        android:translationY="13dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_coin_description"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/load_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/load_content"
            android:textColor="@color/black"
            android:textSize="15sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvTitleInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal"
            android:text="@string/information"
            android:textColor="@color/black"
            android:textSize="20sp"

            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vDivisorInformation" />

        <View
            android:id="@+id/vDivisorInformation"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginVertical="10dp"
            android:background="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleInformation" />

        <TextView
            android:id="@+id/tvTitleSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/symbol"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/vDivisorInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContentSymbol"/>

        <TextView
            android:id="@+id/tvContentSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/load_content"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/vDivisorInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleSymbol"/>

        <TextView
            android:id="@+id/tvTitleWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/website"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvTitleSymbol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContentWeb"/>

        <TextView
            android:id="@+id/tvContentWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/load_content"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentSymbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleWeb"/>

        <TextView
            android:id="@+id/tvTitleDateAdded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_added"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvTitleWeb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContentDateAdded"/>

        <TextView
            android:id="@+id/tvContentDateAdded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/load_content"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentWeb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleDateAdded"/>

        <TextView
            android:id="@+id/tvTitlePrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentDateAdded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContentPrice"/>

        <TextView
            android:id="@+id/tvContentPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/load_content"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentDateAdded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitlePrice"/>

        <TextView
            android:id="@+id/tvTitleSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/supply"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContentSupply"/>

        <TextView
            android:id="@+id/tvContentSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/load_content"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toBottomOf="@id/tvContentPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleSupply"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

